--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "queen_amdi",
+    "name": "Maev_b0t",
     "version": "3.6.2v",
     "description": "Queen Amdi Bot project - a Whatsapp userbot helping to improve your Whatsapp experience.",
     "main": "./QueenAmdi/assets/module.js",
