--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "Maev_b0t",
     "version": "3.6.2v",
-    "description": "Queen Amdi Bot project - a Whatsapp userbot helping to improve your Whatsapp experience.",
+    "description": "Maevb0t _< ",
     "main": "./QueenAmdi/assets/module.js",
     "scripts": {
       "start": "supervisor -s assets/module.js"
     },
     "repository": {
       "type": "git",
-      "url": "git+https://github.com/BlackAmda/QueenAmdi.git"
+      "url": "git+https://github.com//QueenAmdi.git"
     },
     "keywords": [
       "whatsapp"
@@ -17,9 +17,9 @@
     "developer": "AN Tech",
     "license": "GPL-3.0-or-later",
     "bugs": {
-      "url": "https://github.com/BlackAmda/QueenAmdi/issues"
+      "url": "https://github.com/ztmaev/QueenAmdi/issues"
     },
-    "homepage": "https://github.com/BlackAmda/QueenAmdi#readme",
+    "homepage": "https://github.com/ztmaev/QueenAmdi#readme",
     "dependencies": {
       "@blackamda/queenamdi-web-api": "^1.0.2",
       "queenamdi-public": "^1.1.0",
